Use j2html to create html code fragments